# cooklang-import

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  Taskfile.yaml  architecture.md  build.rs  config.toml.example  cook-import  cook-import.spec  default.nix  pyproject.toml  requirements.txt  shell.nix  uniffi.toml  utils.py
.github/workflows/: ci.yml  release-new.yml  release.yml  test.yml
Sources/CooklangImport/: CooklangImport.swift
docs/: api-rust.md  providers.md  sdk-android.md  sdk-ios.md  troubleshooting.md
docs/plans/: 2025-12-05-architecture-design.md  2025-12-05-architecture-implementation.md  2026-02-05-image-ocr-triple-extraction-design.md  2026-02-05-image-ocr-triple-extraction-impl.md  2026-03-09-page-scriber-integration-design.md  2026-03-09-page-scriber-integration-impl.md
examples/: builder_advanced.rs  builder_basic.rs  debug_seriouseats.rs  simple_api.rs
parsed_recipes/: Apple Cinnamon Ginger Coffee Cake Muffins.cook  Breakfast Sausage Meatball Appetizers.cook  Broccoli Salad with Apples, Walnuts, and Cranberries.cook  Pumpkin French Toast Casserole.cook  Spiced Orange Cranberry Sauce.cook
scripts/: build-android.sh  build-ios.sh  build_spec.sh  generate-swift-package.sh  publish-android.sh  test-ios-release.sh
src/: builder.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  ocr.rs  uniffi_bindings.rs
src/converters/: anthropic.rs  azure_openai.rs  google.rs  mod.rs  ollama.rs  open_ai.rs  prompt.rs  prompt.txt
src/extractors/: html_class.rs  json_ld.rs  microdata.rs  mod.rs  plain_text_llm.rs
src/images_to_text/: mod.rs  ocr.rs
src/pipelines/: image.rs  mod.rs  text.rs  url.rs
src/providers/: anthropic.rs  azure_openai.rs  factory.rs  fallback.rs  google.rs  mod.rs  ollama.rs  open_ai.rs  prompt.rs  prompt.txt
src/url_to_text/: mod.rs
src/url_to_text/fetchers/: chrome.rs  mod.rs  page_scriber.rs  request.rs
src/url_to_text/html/extractors/: html_class.rs  json_ld.rs  microdata.rs  mod.rs
src/url_to_text/text/: extractor.rs  mod.rs
tests/: json_ld_metadata_test.rs  test_array_fields.rs  test_author_id_only.rs  test_builder_api.rs  test_case_insensitive_type.rs  test_cloudflare_bypass.rs  test_download_mode.rs  test_edge_cases.rs  test_german_recipe.rs  test_html_class_extractor.rs  test_microdata.rs  test_missing_ingredients.rs  test_natashaskitchen_example.rs  test_no_instructions.rs  test_page_scriber_routing.rs  test_real_world.rs
