[package]
name = "cooklang-import"
version = "0.7.0"
edition = "2021"
description = "A tool for importing recipes into Cooklang format"
license = "MIT"
repository = "https://github.com/cooklang/cooklang-import"
documentation = "https://docs.rs/cooklang-import"
homepage = "https://github.com/cooklang/cooklang-import"

[lib]
name = "cooklang_import"
path = "src/lib.rs"

[[bin]]
name = "cooklang-import"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.83"
config = "0.14"
env_logger = "0.11"
html-escape = "0.2"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls-vendored"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
mockito = "1.5.0"
tokio = { version = "1.0", features = ["full", "rt", "macros", "test-util"] }
