[package]
name = "cooklang-import"
version = "0.8.2"
edition = "2021"
description = "A tool for importing recipes into Cooklang format"
license = "MIT"
repository = "https://github.com/cooklang/cooklang-import"
documentation = "https://docs.rs/cooklang-import"
homepage = "https://github.com/cooklang/cooklang-import"
default-run = "cooklang-import"

[lib]
name = "cooklang_import"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cooklang-import"
path = "src/main.rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[features]
uniffi-cli = ["dep:uniffi", "uniffi/cli"]
default = []
uniffi = ["dep:uniffi"]

[dependencies]
async-trait = "0.1.83"
base64 = "0.22"
config = "0.14"
env_logger = "0.11"
html-escape = "0.2"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls-vendored", "native-tls-alpn"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uniffi = { version = "0.28", optional = true }

[dev-dependencies]
mockito = "1.5.0"
tokio = { version = "1.0", features = ["full", "rt", "macros", "test-util"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
