[package]
name = "cooklang-import"
version = "0.8.11"
edition = "2021"
description = "A tool for importing recipes into Cooklang format"
license = "MIT"
repository = "https://github.com/cooklang/cooklang-import"
documentation = "https://docs.rs/cooklang-import"
homepage = "https://github.com/cooklang/cooklang-import"
default-run = "cooklang-import"

[lib]
name = "cooklang_import"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cooklang-import"
path = "src/main.rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[features]
uniffi-cli = ["uniffi", "uniffi/cli"]
default = []
uniffi = ["dep:uniffi"]

[dependencies]
async-trait = "0.1.83"
base64 = "0.22"
# Only enable toml format - saves ~300KB from yaml/json5/ron/ini parsers
config = { version = "0.14", default-features = false, features = ["toml"] }
# Disable default features (regex, color) - saves ~430KB from regex stack
env_logger = { version = "0.11", default-features = false }
html-escape = "0.2"
log = "0.4"
# Use native-tls-vendored in reqwest (handles OpenSSL for Android, Security.framework for iOS)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls-vendored"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
# Only enable required tokio features - saves ~100KB
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }
uniffi = { version = "0.28", optional = true }

[dev-dependencies]
mockito = "1.5.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "test-util"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"], optional = true }

# Release profile optimizations for smaller binaries
[profile.release]
lto = true              # Link-time optimization - significant size reduction
codegen-units = 1       # Better optimization (slower compile)
opt-level = "z"         # Optimize for size
strip = true            # Strip symbols from binary
panic = "abort"         # Smaller binary, no unwinding (safe for FFI with proper error handling)
