[tool.poetry]
name = "cook-import"
version = "0.1.0"
description = ""
authors = ["Alexey Dubovskoy <dubovskoy.a@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
recipe-scrapers = "^13.10.0"
parse-ingredients = {url = "https://github.com/cooklang/parse-ingredients/archive/refs/tags/v0.0.4.tar.gz"}
pyinstaller = "^4.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cook-import = 'cook-import:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
